feat: Center content and optimize import map
Centers the application content using flexbox and reorders the import map for better readability. Removes redundant inline styles from the loading state and applies them to the root element.

--- a/index.html
+++ b/index.html
@@ -11,37 +11,40 @@
         body {
             background-color: #000000;
             color: #ffffff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
             margin: 0;
             font-family: sans-serif;
-            /* Flex styles moved to a wrapper inside root to avoid conflicting with React Layout */
         }
     </style>
-    <script type="importmap">
-    {
-      "imports": {
-        "react/": "https://aistudiocdn.com/react@^19.2.0/",
-        "react": "https://aistudiocdn.com/react@^19.2.0",
-        "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-        "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-        "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0"
-      }
-    }
-    </script>
+<script type="importmap">
+{
+  "imports": {
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+  }
+}
+</script>
 </head>
 <body>
-    <div id="root">
-        <!-- Loading State Content (Requested by User) -->
-        <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh;">
-            <h1 class="text-3xl font-bold text-blue-500">PRIMA STUDIO</h1>
-            <p class="mt-4 text-gray-400">Система работает.</p>
-            <p class="mt-2 text-sm text-gray-600">Жду код из index.tsx...</p>
-        </div>
+    <div id="root" class="w-full h-full flex flex-col items-center justify-center">
+        <h1 class="text-3xl font-bold text-blue-500">PRIMA STUDIO</h1>
+        <p class="mt-4 text-gray-400">Система работает.</p>
+        <p class="mt-2 text-sm text-gray-600">Жду код из index.tsx...</p>
     </div>
 
     <script>
         // Сообщаем Телеграму, что приложение готово
-        window.Telegram.WebApp.ready();
-        window.Telegram.WebApp.expand();
+        if (window.Telegram && window.Telegram.WebApp) {
+            window.Telegram.WebApp.ready();
+            window.Telegram.WebApp.expand();
+        }
     </script>
     <script type="module" src="/index.tsx"></script>
 </body>
