--- a/index.html
+++ b/index.html
@@ -4,21 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>PRIMA Studio</title>
+    
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script type="text/javascript" src="https://unpkg.com/parse/dist/parse.min.js"></script>
+    <script src="https://unpkg.com/parse/dist/parse.min.js"></script>
+
     <style>
-        body {
-            background-color: #000000;
-            color: #ffffff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            font-family: sans-serif;
-        }
+        body { background-color: #000; color: #fff; font-family: sans-serif; overflow: hidden; }
     </style>
 <script type="importmap">
 {
@@ -33,19 +25,7 @@
 </script>
 </head>
 <body>
-    <div id="root" class="w-full h-full flex flex-col items-center justify-center">
-        <h1 class="text-3xl font-bold text-blue-500">PRIMA STUDIO</h1>
-        <p class="mt-4 text-gray-400">Система работает.</p>
-        <p class="mt-2 text-sm text-gray-600">Жду код из index.tsx...</p>
-    </div>
-
-    <script>
-        // Сообщаем Телеграму, что приложение готово
-        if (window.Telegram && window.Telegram.WebApp) {
-            window.Telegram.WebApp.ready();
-            window.Telegram.WebApp.expand();
-        }
-    </script>
+    <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
